# tagger

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  appveyor.yml
script/: make-release-tag
src/: cli.rs  data.rs  db.rs  db_migrations.rs  error.rs  extension_set.rs  file_info.rs  foo.rs  item.rs  like.rs  location.rs  main.rs  media_path_checker.rs  project.rs  result.rs  sample_visitor.rs  signature.rs  tag.rs  walk.rs
src/action/: check_action.rs  check_database.rs  check_database_action.rs  check_file_system.rs  check_file_system_action.rs  default.rs  delete_tag.rs  dump.rs  dump_action.rs  list_files.rs  list_files_action.rs  list_tags.rs  list_tags_action.rs  mod.rs  rebuild.rs  rebuild_action.rs  report.rs  report_action.rs  scan.rs  scan_action.rs  search.rs  search_action.rs  show_file.rs  tag.rs  tag_action.rs
src/db/: dao.rs  migration_202103210001.rs  migration_202103210002.rs  migration_202103220001.rs  migrations.rs  mod.rs  util.rs
