[package]
name = "tagger"
version = "0.1.0"
authors = ["Richard Cook <rcook@rcook.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0.1"
rusqlite = { version = "0.24.2", features = ["bundled"] } # https://www.davideaversa.it/blog/build-rusqlite-windows/
sha2 = "0.9.3"
